Fixed horizontal overflow

--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,8 @@
 body {
     font-family:'Arima','Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin: 0;
-    width: 100vw;
-
+    width: 100%;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
 
